--- a/bin/index.html
+++ b/bin/index.html
@@ -22,7 +22,7 @@
 		};
 		swfobject.embedSWF(
 			"Reversi.swf", 
-			"altContent", "100%", "100%", "10.0.0", 
+			"altContent", "800", "600", "10.0.0", 
 			"expressInstall.swf", 
 			flashvars, params, attributes);
 	</script>
